# Tech-Agent

./: .env.example  .env.test  .gitignore  ARCHITECTURE_GENERATION_PROCESS.md  ARCHITECTURE_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE_IMPLEMENTATION_STATUS.md  ARCHITECTURE_INTEGRATION_PLAN.md  CLAUDE.md  CLI_USAGE.md  CLI_USAGE_GUIDE.md  CODEBASE_AUDIT_CORRECTIONS_2025.md  CRITICAL_FIXES_COMPLETED.md  DOCUMENTATION_VS_CODE_AUDIT.md  Dockerfile  EXAMPLE_ARCHITECTURE_DIAGRAM.md  HOW_TO_FINISH_WEEK_13_14.md  IMPLEMENTATION_PLAN.md  INTEGRATION_CONFIGURATION_GUIDE.md  LOCAL_ANYON_INTEGRATION.md  README.md  SETUP_GUIDE.md  SETUP_LOCAL.md  STATUS_CHECK_RESOLVED.md  TASKS_FOR_YOU.md  TECH_AGENT_COMPLETE_WORKFLOW.mermaid  TEST_RESULTS.md  Tech_Spec_Agent_Integration_Plan_FINAL.md  Tech_Spec_Agent_LangGraph_Detailed.md  Tech_Spec_Agent_Plan.md  Tech_Spec_Agent_Visual_Summary.md  UPDATED_CODE_AUDIT_2025.md  WEEK_12_PERFORMANCE_OPTIMIZATIONS.md  WEEK_13_14_TESTING_COMPLETE.md  WEEK_13_14_TESTING_HONEST_ASSESSMENT.md  WEEK_13_14_TEST_RESULTS.md  WEEK_1_COMPLETE.md  WEEK_2_COMPLETE.md  WEEK_2_FIXES.md  WEEK_3_COMPLETE.md  WEEK_3_FIXES.md  (+21 more)
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  correction_plan_audit.md  deployment_status_investigation.md  project_overview.md  project_structure.md  setup_status_investigation.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py  002_fix_trd_jsonb_columns.py
cli/: __init__.py  decision_handler.py  file_loader.py  main.py  memory_profiler.py  terminal_ui.py  workflow_runner.py
docker-archive/: .dockerignore.backup  README.md
docs/: CODEBASE_OVERVIEW.md  QUERY_OPTIMIZATION_GUIDE.md
monitoring/: prometheus.yml
monitoring/grafana/: dashboards.yml
scripts/: init-db.sql  run_migrations.py  seed_database.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  endpoints.py  error_middleware.py  rate_limit.py  schemas.py  workflow_executor.py  workflow_routes.py
src/auth/: __init__.py  jwt.py
src/cache/: __init__.py  redis_client.py
src/database/: __init__.py  connection.py  models.py
src/integration/: __init__.py  design_agent_loader.py
src/langgraph/: __init__.py  checkpointer.py  error_logging.py  state.py  workflow.py
src/langgraph/nodes/: analysis_nodes.py  code_analysis_nodes.py  generation_nodes.py  load_inputs.py  persistence_nodes.py  research_nodes.py
src/llm/: __init__.py  client.py
src/monitoring/: __init__.py  metrics.py
src/research/: __init__.py  tech_research.py
src/websocket/: __init__.py  connection_manager.py  routes.py
src/workers/: __init__.py  decision_parser.py  job_processor.py
test-inputs/: prd.md
test-inputs/design-docs/: design_system.md  screen_specs.md  ux_flow.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_integration.py  test_architecture_generation.py  test_database_integration.py  test_full_workflow.py  test_websocket.py  test_workflow_integration.py
tests/performance/: __init__.py  conftest.py  test_cross_schema_performance.py  test_load.py  test_query_performance.py
tests/unit/: __init__.py  test_api_endpoints.py  test_code_analysis.py  test_config.py  test_database.py  test_design_agent_loader.py  test_error_logging.py  test_main.py  test_models.py  test_redis_cache.py  test_state.py  test_trd_generation.py  test_workflow_nodes.py
